--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ db.sqlite3
 db.sqlite3-journal
 media
 */migrations/00*.py
-foodream/__pycache__/
-foodream/db.sqlite3
-foodream/media
-foodream/*/migrations/00*.py
-foodream/*.pyc
-foodream/*.pot
-foodream/*.log
+/foodream/__pycache__/
+/foodream/db.sqlite3
+/foodream/media
+/foodream/*/migrations/00*.py
+/foodream/*.pyc
+/foodream/*.pot
+/foodream/*.log
